Issue 13: Streamlets Context (#21)
Implemented initial support for context-aware Streamlets via ContextManager and StreamletContext.

Signed-off-by: Hossam Elghamry <ghamry_97@hotmail.com>